fortune/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune
spec:
  selector:
    app: fortune
  ports:
  - port: 80
    targetPort: 80
